<resources>
    <string name="app_name">Comic Collection</string>
    <string name="add">Add</string>
    <string name="enter_title">Enter Comic Title</string>
    <string name="enter_issue_number">Enter Issue Number</string>
    <string name="enter_series_number">Enter Series Number</string>
    <string name="enter_issue_date">Enter Issue Date</string>
    <string name="enter_issue_cost">Enter Issue Cost</string>
    <string name="clear">Clear</string>
    <string name="display">Display List</string>
    <string name="warning">Add this Comic?</string>
    <string name="warning_message">Do you want to add this comic</string>
    <string name="ok">Ok</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>